# testGameTask

./: CMakeLists.txt  game_field.cpp  game_field.h  game_field_element.cpp  game_field_element.h  main.cpp  mainwindow.cpp  mainwindow.h
